tests/transpiler/x/cpp/json_builtin.cpp
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:20:02 GMT+7
#include <iostream>
#include <string>
#include <map>
#include <sstream>
#include <iomanip>


auto m = std::map<auto, int>{{a, 1}, {b, 2}};

int main() {
    json(m);
    return 0;
}
